<resources>
    <string name="app_name">WiFi2</string>
    <string name="Start">Start Bluetooth</string>
    <string name="Search">Search for Device</string>
    <string name="Connect">Connect to Device</string>
    <string name="DiscoverServices">Discover Services and Characteristics</string>
    <string name="GetChars">Get Characteristics</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Capsense">CapSense Temperature Value =</string>
</resources>
