<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:text="@string/Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="true"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <Button
        android:id="@+id/connect_button"
        android:text="@string/Connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <Button
        android:id="@+id/discoverSvc_button"
        android:text= "@string/DiscoverServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <Button
        android:id="@+id/disconnect_button"
        android:text="@string/Disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/capsense_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        />

</LinearLayout>